加入server端代码

--- a/server/makefile
+++ b/server/makefile
@@ -8,8 +8,8 @@ else
 
 endif
 
-server: main.cpp  ./src/mysql_server.cpp ./src/tcp_net.cpp ./src/tcp_kernel.cpp ./src/thread_pool.cpp
-	$(CXX) -o server  $^ $(CXXFLAGS) -lpthread -lmysqlclient
+tcp_server: main.cpp  ./src/mysql_server.cpp ./src/tcp_net.cpp ./src/tcp_kernel.cpp ./src/thread_pool.cpp ./src/udp_net.cpp
+	$(CXX) -o tcp_server  $^ $(CXXFLAGS) -lpthread -lmysqlclient
 
 clean:
-	rm  -r server
+	rm  -r tcp_server
