整理源代码文件到src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,31 +31,26 @@ find_package(Qt5 COMPONENTS Network REQUIRED)
 find_package(Qt5 COMPONENTS Multimedia REQUIRED)
 
 include(${CMAKE_SOURCE_DIR}/build/conanbuildinfo.cmake)
+include_directories(src)
 conan_basic_setup()
 
 set(SRC 
-    #.cpp
-    main.cpp
-    mainwindow.cpp
-    mychatroom.cpp
-    myqq.cpp
-    videoitem.cpp
-
     #.ui
-    login_register/login.ui
-    login_register/registerwin.ui
-    mainwindow.ui
-    meet_room/roomdialog.ui
-    mychatroom.ui
-    myqq.ui
-    videoitem.ui
+    src/login_register/login.ui
+    src/login_register/registerwin.ui
+    src/mainwindow.ui
+    src/meet_room/roomdialog.ui
+    src/mychatroom.ui
+    src/myqq.ui
+    src/videoitem.ui
 )
-aux_source_directory(audio SRC)
-aux_source_directory(audio_codec SRC)
-aux_source_directory(common SRC)
-aux_source_directory(login_register SRC)
-aux_source_directory(meet_room SRC)
-aux_source_directory(net_api SRC)
+aux_source_directory(src SRC)
+aux_source_directory(src/audio SRC)
+aux_source_directory(src/audio_codec SRC)
+aux_source_directory(src/common SRC)
+aux_source_directory(src/login_register SRC)
+aux_source_directory(src/meet_room SRC)
+aux_source_directory(src/net_api SRC)
 
 set(QRC resource.qrc)
 add_executable(${PROJECT_NAME} ${SRC} ${QRC})
